- JGRP-2242 Narrow set of thrown exceptions in Streamable and Marshaller method signatures. - Refined Paul's PR